去除无效标签

--- a/randomBit.html
+++ b/randomBit.html
@@ -12,6 +12,7 @@
             background-color:#eee;
             text-align:center;
             color:red;
+            cursor: pointer;            
         }
         p{
             width:75px;
@@ -22,7 +23,7 @@
 </head>
 <body>
     <p>验证码：</p>
-    <div id="login" onclick="show()"><a href="#"></a></div>
+    <div id="login" onclick="show()"></div>
     <script type="text/javascript">
         function codes(n){
             var a="azxcvbnmsdfghjklqwertyuiopZXCVBNMASDFGHJKLQWERTYUIOP0123456789";
